package org.example.aluguelcarroslds.enums;

public enum TipoAgente {
    BANCO,
    EMPRESA
}
