@startuml
left to right direction
abstract class Usuario {
  - nome String
  - rg String
  - cpf String
  - endereco String
  - email String
  - senha String

  + login()
  + logout()
}

class Cliente{
  - profissao String
  - rendimentos ArrayList<Contrato>

  + criarPedido()
  + modificarPedido()
  + consultarPedido()
  + cancelarPedido()
}

abstract class Agente {
  - tipoAgente String

  + avaliarPedido()
  + modificarPedido()
}
enum TipoAgente {
    Banco
    Empresa
}

class Banco {
   + criarContratoCredito()
}

class Empresa{
}

class Pedido {
  - dataCriacao Date
  - status String
  - cliente Cliente
  - automovel Automovel
  - contrato Contrato
  - contratoCredito Credito

  + analisarPedido()
  + confirmarContrato()
  + modificarPedido()
  + cancelarPedido()
}

class Contrato {
  - dataAssinatura Date
  - valor Double
  - tipoContrato

  + gerarContrato()
  + cancelarContrato()
}
Enum TipoContrato {
    Cliente
    Empresa
    Banco
}

class Credito {
  - valorCredito Double
  - taxaJuros Double
  - prazo Int
  - bancoQueConcedeu Banco

  + calcularParcelas()
}
enum Prazo {
    12
    24
    36
    48
}

class Automovel {
  - matricula String
  - ano Int
  - marca String
  - modelo String
  - placa String

  + disponibilidade()
}

Cliente -r-|> Usuario
Agente -l-|>  Usuario
Agente <|-- Banco
Agente <|-r- Empresa
Agente -u- "tipoAgente" TipoAgente
Pedido o-u- Cliente
Pedido o-l- Contrato
Pedido o-r- Credito
Pedido o-- Automovel
Contrato -u- "tipoContrato" TipoContrato
Prazo "prazo" -u- Credito
Banco -l-o Credito
'Automovel o-r- Empresa
'Automovel o-- Banco

@enduml
